# NeSearche_engine

./: .gitignore  CMakeLists.txt  README.md  answers.json  config.json  requests.json
include/: ConverterJSON.h  InvertedIndex.h  InverterIndex.h  SearchServer.h  allExceptions.h
resources/: file001.txt  file002.txt  file003.txt
src/: ConverterJSON.cpp  InvertedIndex.cpp  InverterIndex.cpp  SearchServer.cpp  allExceptions.cpp  main.cpp
